--- a/docs/styles.css
+++ b/docs/styles.css
@@ -80,12 +80,16 @@ body{
     justify-content: space-between;
 }
 
-.button button{
-    padding: 2px 8px;
-    border-radius: 5px;
-    background: rgb(150,184,64, 74%);
-    
-}   
+.btn{
+ background-color: rgba(247, 3, 203, 0.958);
+ padding: 3px 15px;
+ border-radius: 7px;
+}
+
+.bttn:link { text-decoration: none; }
+
+.btn:hover {color:  rgb(150,184,64); /*this is how to style a link when the mouse hovers over it*/
+}
 
 .button a{
     font-size: 16px;
