--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -16,6 +16,9 @@
                         <div id="formMessage" class="form-message"></div>
                         <button type="submit" class="btn btn-primary btn-block">Create account</button>
                     </form>
+                    <div class="text-center mt-3">
+                        <p>Have an account already? <a href="{% url 'login' %}">Login</a></p>
+                    </div>
                 </div>
             </div>
         </div>
