--- a/docs/styles.css
+++ b/docs/styles.css
@@ -77,7 +77,7 @@ body{
     margin: 10px 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .btn{
