settings py database .env names changed to be unique from user an already named enviromental variable

--- a/milestones/templates/milestones/log_milestone.html
+++ b/milestones/templates/milestones/log_milestone.html
@@ -68,6 +68,8 @@
     </div>
 </div>
 
+
+<!-- Script to automatically fill in and append today's date to date field when checkbox is checked -->
 <script>
     window.onload = function() {
         let checkboxes = document.querySelectorAll("input[type=checkbox][name=logged_milestones]");
