--- a/accounts/templates/base_generic.html
+++ b/accounts/templates/base_generic.html
@@ -4,6 +4,10 @@
 <head>
     <title>My App</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="{% static 'images/favicon.png' %}" type="image/png">
+
+
+    
 
 </head>
 <body>
