--- a/milestones/templates/base_milestones.html
+++ b/milestones/templates/base_milestones.html
@@ -4,6 +4,7 @@
 <head>
     <title>Baby Tracker</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="{% static 'images/favicon.png' %}" type="image/png">
 </head>
 <body>
     <header>
